--- a/docs/manifest/cfg/nginx/nginx.conf
+++ b/docs/manifest/cfg/nginx/nginx.conf
@@ -19,8 +19,10 @@ http {
     listen 80 default_server;
     server_name _;
 
+    error_page 404 /404.html;
+
     root /www;
-    index index.html index.php;
+    index index.html;
 
     location / {
       try_files $uri $uri/ =404;
