chore(docs): add fly.toml file as a hail mary
Ref #799

Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -7,4 +7,5 @@ RUN npm ci && npm run build
 
 FROM ghcr.io/xe/nginx-micro
 COPY --from=build /app/build /www
+COPY ./manifest/cfg/nginx/nginx.conf /conf
 LABEL org.opencontainers.image.source="https://github.com/TecharoHQ/anubis"
