--- a/data/botPolicies.yaml
+++ b/data/botPolicies.yaml
@@ -74,13 +74,13 @@ bots:
     weight:
       adjust: 10
 
-  ## System load based checks.
-  # If the system is under high load, add weight.
-  - name: high-load-average
-    action: WEIGH
-    expression: load_1m >= 10.0 # make sure to end the load comparison in a .0
-    weight:
-      adjust: 20
+  # ## System load based checks.
+  # # If the system is under high load, add weight.
+  # - name: high-load-average
+  #   action: WEIGH
+  #   expression: load_1m >= 10.0 # make sure to end the load comparison in a .0
+  #   weight:
+  #     adjust: 20
 
   ## If your backend service is running on the same operating system as Anubis,
   ## you can uncomment this rule to make the challenge easier when the system is
