ci(docs): make a new docker image for the docs per commit sha (#831)
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -2,7 +2,7 @@ name: Docs test build
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -24,7 +24,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
         with:
-          images: ghcr.io/${{ github.repository }}/docs
+          images: ghcr.io/techarohq/anubis/docs
+          tags: |
+            type=sha,format=long
+            type=edge,branch=main
 
       - name: Build and push
         id: build
