ci(docs): fix docs image tag names in the right file
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -37,8 +37,8 @@ jobs:
         with:
           images: ghcr.io/techarohq/anubis/docs
           tags: |
-            type=sha,format=long
-            type=edge,branch=main
+            type=sha,enable=true,priority=100,prefix=,suffix=,format=long
+            main
 
       - name: Build and push
         id: build
