fix(docs/manifest): k8s typo
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/docs/manifest/deployment.yaml
+++ b/docs/manifest/deployment.yaml
@@ -92,6 +92,7 @@ spec:
               type: RuntimeDefault
           envFrom:
             - secretRef:
+                name: anubis-docs-thoth
           readinessProbe:
             httpGet:
               path: /healthz
