--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@techaro/anubis",
-  "version": "1.21.0-pre3",
+  "version": "1.21.0",
   "description": "",
   "main": "index.js",
   "scripts": {
