--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "postcss-import": "^16.1.1",
     "postcss-import-url": "^7.2.0",
     "postcss-url": "^10.1.3"
+  },
+  "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0"
   }
 }
