fix(web): embed challenge ID in pass-challenge invocations (#944)
* refactor: make challenge pages return the challenge component

This means that challenge pages will return only the little bit that
actually matters, not the entire component.

Signed-off-by: Xe Iaso <me@xeiaso.net>

* fix(web): move Anubis version info to be implicitly in the footer

Signed-off-by: Xe Iaso <me@xeiaso.net>

* fix(web): embed challenge ID into generated pages

Signed-off-by: Xe Iaso <me@xeiaso.net>

* fix(lib): make tests pass

Signed-off-by: Xe Iaso <me@xeiaso.net>

* test(lib/policy/config): amend tests

Signed-off-by: Xe Iaso <me@xeiaso.net>

* test(lib): fix tests again

Signed-off-by: Xe Iaso <me@xeiaso.net>

---------

Signed-off-by: Xe Iaso <me@xeiaso.net>
Signed-off-by: Xe Iaso <xe.iaso@techaro.lol>

--- a/lib/testdata/test_config_no_thresholds.yaml
+++ b/lib/testdata/test_config_no_thresholds.yaml
@@ -35,11 +35,4 @@ status_codes:
   CHALLENGE: 200
   DENY: 200
 
-thresholds:
-  - name: minimal-suspicion
-    expression: "true"
-    action: CHALLENGE
-    challenge:
-      algorithm: fast
-      difficulty: 1
-      report_as: 1
+thresholds: []
