feat(checker): allow png/gif/jpg/jpeg/svg favicons as well as ico (#961)
* feat(checker): allow png/gif/jpg/jpeg/svg favicons as well as ico

* changelog: add updates to keep-internet-working.yaml

---------

Signed-off-by: Xe Iaso <xe.iaso@techaro.lol>
Co-authored-by: Xe Iaso <xe.iaso@techaro.lol>

--- a/data/common/keep-internet-working.yaml
+++ b/data/common/keep-internet-working.yaml
@@ -3,7 +3,7 @@
   path_regex: ^/.well-known/.*$
   action: ALLOW
 - name: favicon
-  path_regex: ^/favicon.ico$
+  path_regex: ^/favicon.(?:ico|png|gif|jpg|jpeg|svg)$
   action: ALLOW
 - name: robots-txt
   path_regex: ^/robots.txt$
