default pattern fixes (#963)
* feat(checker): allow png/gif/jpg/jpeg/svg favicons as well as ico

* changelog: add updates to keep-internet-working.yaml

* fix(checker): tighten default regex patterns for well-known files

* changelog: add updates to regular expression patterns in keep-internet-working.yaml

---------

Signed-off-by: Elliot Speck <11192354+arcayr@users.noreply.github.com>

--- a/data/common/keep-internet-working.yaml
+++ b/data/common/keep-internet-working.yaml
@@ -1,13 +1,13 @@
 # Common "keeping the internet working" routes
 - name: well-known
-  path_regex: ^/.well-known/.*$
+  path_regex: ^/\.well-known/.*$
   action: ALLOW
 - name: favicon
-  path_regex: ^/favicon.(?:ico|png|gif|jpg|jpeg|svg)$
+  path_regex: ^/favicon\.(?:ico|png|gif|jpg|jpeg|svg)$
   action: ALLOW
 - name: robots-txt
-  path_regex: ^/robots.txt$
+  path_regex: ^/robots\.txt$
   action: ALLOW
 - name: sitemap
-  path_regex: ^/sitemap.xml$
+  path_regex: ^/sitemap\.xml$
   action: ALLOW
